Added in some dialog stuff

--- a/templates/index.html
+++ b/templates/index.html
@@ -77,22 +77,106 @@
             </aside>
         </div>
         <div id="annotations">
-            <article class="annotation explain">
-                <article>
-                    <header>
-                        <h1>Dave O'Flynn <time datetime="">Sometime</time></h1>
-                    </header>
-                    <div class="information"></div>
-                    <footer>
-                        <button>Reply</button>
-                        <button>Add to tasks</button>
-                    </footer>
-                </article>
-            </article>
+            <section id="annotation1">
+                <div class="item">
+                    <article class="explain">
+                        <header>
+                            <h1><img src="" title="" alt="" />Dave O'Flynn <time datetime="">Sometime</time></h1>
+                        </header>
+                        <div class="information"></div>
+                        <footer>
+                            <button>Reply</button>
+                            <button>Add to tasks</button>
+                        </footer>
+                    </article>
+                    <div class="item">
+                        <article class="comment">
+                            <header>
+                            <h1><img src="" title="" alt="" />Dave O'Flynn <time datetime="">Sometime</time></h1>
+                            </header>
+                            <div class="information"></div>
+                            <footer>
+                                <button>Reply</button>
+                                <button>Add to tasks</button>
+                            </footer>
+                        </article>
+                    </div>
+                    <div class="item">
+                        <article class="comment">
+                            <header>
+                                <h1><img src="" title="" alt="" />Dave O'Flynn <time datetime="">Sometime</time></h1>
+                            </header>
+                            <div class="information"></div>
+                            <footer>
+                                <button>Reply</button>
+                                <button>Add to tasks</button>
+                            </footer>
+                        </article>
+                    </div>
+                </div>
+                <div class="item">
+                    <article class="explain">
+                        <header>
+                            <h1>Dave O'Flynn <time datetime="">Sometime</time></h1>
+                        </header>
+                        <div class="information"></div>
+                        <footer>
+                            <button>Reply</button>
+                            <button>Add to tasks</button>
+                        </footer>
+                    </article>
+                </div>
+            </section>
+            <section id="annotation2">
+            </section>
         </div>
         <footer>
             This is the footer
         </footer>
+        <div id="dialogs">
+            <div class="dialog explain">
+                <header>
+                    <h1>Explain</h1>
+                    <button>Close</button>
+                </header>
+                <form id="" name="" action="" method="">
+                    <fieldset>
+                        <legend>Explain</legend>
+                        <label for="explain">Explain</label>
+                        <textarea id="explain"></textarea>
+                    </fieldset>
+                    <button type="submit">Submit</button>
+                </form>
+            </div>
+            <div class="dialog comment">
+                <header>
+                    <h1>Comment</h1>
+                    <button>Close</button>
+                </header>
+                <form id="" name="" action="" method="">
+                    <fieldset>
+                        <legend>Comment</legend>
+                        <label for="comment">Comment</label>
+                        <textarea id="comment"></textarea>
+                    </fieldset>
+                    <button type="submit">Submit</button>
+                </form>
+            </div>
+            <div class="dialog addTask">
+                <header>
+                    <h1>Add task</h1>
+                    <button>Close</button>
+                </header>
+                <form id="" name="" action="" method="">
+                    <fieldset>
+                        <legend>Add to Todo list</legend>
+                        <label for="addTask">Add to todo list</label>
+                        <textarea id="addTask"></textarea>
+                    </fieldset>
+                    <button type="submit">Submit</button>
+                </form>
+            </div>
+        </div>
     </div> 
 </html>
 
