adding more markup

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>Otter</title>
+        <link type="text/css" rel="stylesheet" href="static/css/reset.css" />
     </head>
     <div id="page">
         <header>
@@ -34,11 +35,21 @@
                 <!--The design goes in here-->
             </section>
             <aside id="tasks">
+                <header>
+                    <a href="">Todo (3)</a>
+                    <a href="">Done (42)</a>
+                </header>
                 <div id="tasks-todo">
+                    <header>
+                    <form id="" name="" action="" method="">
                     <article id="">
                         <section class="">
                             <header>
-                                <time datetime="">17 mar 2011, 14:56</time>
+                            <time datetime="">17 mar 2011, 14:56</time>
+                            </header>
+                            <div class="information">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</div>
+                            <input type="checkbox" name="" id="" value="" />
+                            <label for="">Resolved</label>
                         </section>
                         <section class="">
                             <!--annotation-->
@@ -53,6 +64,8 @@
                             <!--annotation-->
                         </section>    
                     </article>
+                    </form>
+
                 </div>
                 <div id="tasks-done">
                     <article id="">
