--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
         <title>Otter</title>
         <link type="text/css" rel="stylesheet" href="static/css/reset.css" />
         <link type="text/css" rel="stylesheet" href="static/css/common.css" />
+		<script src="static/js/upload.js"> </script>
     </head>
     <div id="page">
         <header>
