--- a/templates/index.html
+++ b/templates/index.html
@@ -40,15 +40,17 @@
                     <li><a href="">Sitemap</a></li>
                 </ul>
                 <div class="buttons">
-                    <button>On</button>
-                    <button>On</button>
-                    <button>Upload designs</button>
+                    <div class="group">
+                        <button class="info on">On</button>
+                        <button class="comments off">Off</button>
+                    </div>
+                    <button class="upload">Upload designs</button>
                 </div>
             </div>
         </header>
         <div id="content">
             <section id="design">
-                <!--The design goes in here-->
+                <img src="/static/images/mockup.png" />
             </section>
             <aside id="tasks">
                 <header>
@@ -88,7 +90,6 @@
                         </section>    
                     </article>
                     </form>
-
                 </div>
                 <div id="tasks-done">
                     <article id="">
@@ -110,6 +111,7 @@
                         </section>    
                     </article>
                 </div>
+                <a href="#"></a>
             </aside>
         </div>
         <div id="annotations">
