--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
         <link type="text/css" rel="stylesheet" href="static/css/common.css" />
 		<script src="static/js/upload.js"> </script>
     </head>
-    <div id="page">
+    <div id="page" data-revision="v1">
         <header>
             <div id="productHeader">
                 <a href="" id="logo"><img src="static/images/OtterLogoSmall.png" title="" alt="" /></a>
@@ -216,5 +216,9 @@
             </div>
         </div>
     </div> 
+	 <script>
+		uploader("page");
+		imageOverlays("design");
+	 </script>
 </html>
 
