Updated layout, annotations and comments

--- a/templates/index.html
+++ b/templates/index.html
@@ -136,8 +136,10 @@
                         <div class="annotationId"><span>3.1</span></div>
                         <div class="information">One night, the Potato family sat down to dinner--Mother Potato and her three daughters. Midway through the meal, the eldest daughter spoke up. "Mother Potato?" she said. "I have an announcement to make." </div>
                         <footer>
-                            <button>Reply</button>
-                            <button>Add to tasks</button>
+                            <div class="buttons">
+                                <a href="">Reply</a>
+                                <a href="">Add to tasks</a>
+                            </div>
                         </footer>
                         </div>
                     </article>
@@ -151,22 +153,28 @@
                             <div class="annotationId"><span>3.1</span></div>
                             <div class="information">One night, the Potato family sat down to dinner--Mother Potato and her three daughters. Midway through the meal, the eldest daughter spoke up. "Mother Potato?" she said. "I have an announcement to make." </div>
                             <footer>
-                                <button>Reply</button>
-                                <button>Add to tasks</button>
+                                <div class="buttons">
+                                    <a href="">Reply</a>
+                                    <a href="">Add to tasks</a>
+                                </div>
                             </footer>
                             </div>
                         </article>
                     </div>
                     <div class="item">
                         <article class="comment">
-                            <div class="group">
                             <header>
-                                <h1><img src="" title="" alt="" />Dave O'Flynn <time datetime="">Sometime</time></h1>
+                                <img src="static/images/avatar.png" title="" alt="" /> 
+                                <h1>Dave O'Flynn</h1>
                             </header>
+                            <div class="group">
+                            <div class="annotationId"><span>3.1</span></div>
                             <div class="information">One night, the Potato family sat down to dinner--Mother Potato and her three daughters. Midway through the meal, the eldest daughter spoke up. "Mother Potato?" she said. "I have an announcement to make." </div>
                             <footer>
-                                <button>Reply</button>
-                                <button>Add to tasks</button>
+                                <div class="buttons">
+                                    <a href="">Reply</a>
+                                    <a href="">Add to tasks</a>
+                                </div>
                             </footer>
                             </div>
                         </article>
@@ -175,13 +183,19 @@
                 <div class="item">
                     <article class="explain">
                         <header>
-                            <h1>Dave O'Flynn <time datetime="">Sometime</time></h1>
+                            <img src="static/images/avatar.png" title="" alt="" /> 
+                            <h1>Dave O'Flynn</h1>
                         </header>
-                        <div class="information"></div>
+                        <div class="group">
+                        <div class="annotationId"><span>3.1</span></div>
+                        <div class="information">One night, the Potato family sat down to dinner--Mother Potato and her three daughters. Midway through the meal, the eldest daughter spoke up. "Mother Potato?" she said. "I have an announcement to make." </div>
                         <footer>
-                            <button>Reply</button>
-                            <button>Add to tasks</button>
+                            <div class="buttons">
+                                <a href="">Reply</a>
+                                <a href="">Add to tasks</a>
+                            </div>
                         </footer>
+                        </div>
                     </article>
                 </div>
             </section>
