--- a/templates/index.html
+++ b/templates/index.html
@@ -137,8 +137,8 @@
                         <div class="information">One night, the Potato family sat down to dinner--Mother Potato and her three daughters. Midway through the meal, the eldest daughter spoke up. "Mother Potato?" she said. "I have an announcement to make." </div>
                         <footer>
                             <div class="buttons">
-                                <a href="">Reply</a>
-                                <a href="">Add to tasks</a>
+                                <a class="create" href="">Create a todo</a>
+                                <a class="reply" href="">Reply</a>
                             </div>
                         </footer>
                         </div>
@@ -154,8 +154,8 @@
                             <div class="information">One night, the Potato family sat down to dinner--Mother Potato and her three daughters. Midway through the meal, the eldest daughter spoke up. "Mother Potato?" she said. "I have an announcement to make." </div>
                             <footer>
                                 <div class="buttons">
-                                    <a href="">Reply</a>
-                                    <a href="">Add to tasks</a>
+                                    <a class="create" href="">Create a todo</a>
+                                    <a class="reply" href="">Reply</a>                              
                                 </div>
                             </footer>
                             </div>
@@ -172,8 +172,8 @@
                             <div class="information">One night, the Potato family sat down to dinner--Mother Potato and her three daughters. Midway through the meal, the eldest daughter spoke up. "Mother Potato?" she said. "I have an announcement to make." </div>
                             <footer>
                                 <div class="buttons">
-                                    <a href="">Reply</a>
-                                    <a href="">Add to tasks</a>
+                                <a class="create" href="">Create a todo</a>
+                                <a class="reply" href="">Reply</a>
                                 </div>
                             </footer>
                             </div>
@@ -191,8 +191,8 @@
                         <div class="information">One night, the Potato family sat down to dinner--Mother Potato and her three daughters. Midway through the meal, the eldest daughter spoke up. "Mother Potato?" she said. "I have an announcement to make." </div>
                         <footer>
                             <div class="buttons">
-                                <a href="">Reply</a>
-                                <a href="">Add to tasks</a>
+                                <a class="create" href="">Create a todo</a>
+                                <a class="reply" href="">Reply</a>
                             </div>
                         </footer>
                         </div>
