--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,11 @@
         <link type="text/css" rel="stylesheet" href="static/css/reset.css" />
         <link type="text/css" rel="stylesheet" href="static/css/common.css" />
 		<script src="static/js/upload.js"> </script>
+		<script src="static/js/r.js"></script>
+		<script src="static/js/overlay.js"></script>
+		<script src="static/js/comment.js"></script>
+
+		
     </head>
     <body>
 	    <div id="page" data-revision="v1">
@@ -51,7 +56,6 @@
         </header>
         <div id="content">
             <section id="design">
-                <img src="/static/images/mockup.png" />
             </section>
             <aside id="tasks">
                 <header>
@@ -206,7 +210,7 @@
                     <button type="submit">Submit</button>
                 </form>
             </div>
-            <div class="dialog comment">
+            <div class="dialog comment" id="comment-dialog">
                 <header>
                     <h1>Comment</h1>
                     <button>Close</button>
@@ -238,7 +242,8 @@
     </div> 
 	 <script>
 		uploader("page");
-		imageOverlays("design");
+		var overlayer = imageOverlays("design");
+		overlayer.loadImage("/static/images/mockup.png");
 	 </script>
     </body>
 </html>
