--- a/templates/index.html
+++ b/templates/index.html
@@ -237,7 +237,7 @@
             This is the footer
         </footer>
         <div id="dialogs">
-            <div class="dialog explain" style="display: block">
+            <div class="dialog explain">
                 <header>
                     <h1>Explain</h1>
                 </header>
